// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<p/> hoist textual children into text message object 1`] = `
Array [
  Object {
    "node": <p>
      foo
      <br />
      bar
      <br />
      <br />
      baz
    </p>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "method": "sendMessage",
      "parameters": Object {
        "parse_mode": "HTML",
        "text": "foo
bar

baz",
      },
    },
  },
]
`;

exports[`media elements match snapshot 1`] = `
Array [
  Object {
    "node": <img
      src="http://avatar.my.bot"
    />,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "method": "sendPhoto",
        "parameters": Object {
          "photo": "http://avatar.my.bot",
        },
      },
    },
  },
  Object {
    "node": <video
      src="http://vid.my.bot"
    />,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "method": "sendVideo",
        "parameters": Object {
          "video": "http://vid.my.bot",
        },
      },
    },
  },
  Object {
    "node": <audio
      src="http://sound.my.bot"
    />,
    "path": "$::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "method": "sendAudio",
        "parameters": Object {
          "audio": "http://sound.my.bot",
        },
      },
    },
  },
  Object {
    "node": <file
      src="http://profile.my.bot"
    />,
    "path": "$::3",
    "type": "unit",
    "value": Object {
      "message": Object {
        "method": "sendDocument",
        "parameters": Object {
          "document": "http://profile.my.bot",
        },
      },
    },
  },
]
`;

exports[`render nested elements match snapshot 1`] = `
Array [
  Object {
    "node": <p>
      Mic test
       
      <code>
        Hello, 
        <b>
          Luke Skywalker!
        </b>
      </code>
      <br />
      You know what?
      <br />
      <i>
        <u>
          I'm your
        </u>
         
        <s>
          FATHER
        </s>
         
        <code>
          droid
        </code>
        .
      </i>
      <br />
      <br />
      <pre>
        May the force be with you!
      </pre>
       Test over
    </p>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "method": "sendMessage",
      "parameters": Object {
        "parse_mode": "HTML",
        "text": "Mic test <code>Hello, <b>Luke Skywalker!</b></code>
You know what?
<i><u>I'm your</u> <s>FATHER</s> <code>droid</code>.</i>

<pre>May the force be with you!</pre> Test over",
      },
    },
  },
]
`;

exports[`render shallow elements match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <p>
        abc
      </p>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "method": "sendMessage",
        "parameters": Object {
          "parse_mode": "HTML",
          "text": "abc",
        },
      },
    },
  ],
  Array [
    Object {
      "node": <b>
        important
      </b>,
      "path": "$",
      "type": "text",
      "value": "<b>important</b>",
    },
  ],
  Array [
    Object {
      "node": <i>
        italic
      </i>,
      "path": "$",
      "type": "text",
      "value": "<i>italic</i>",
    },
  ],
  Array [
    Object {
      "node": <s>
        nooooo
      </s>,
      "path": "$",
      "type": "text",
      "value": "<s>nooooo</s>",
    },
  ],
  Array [
    Object {
      "node": <u>
        underlined
      </u>,
      "path": "$",
      "type": "text",
      "value": "<u>underlined</u>",
    },
  ],
  Array [
    Object {
      "node": <code>
        foo.bar()
      </code>,
      "path": "$",
      "type": "text",
      "value": "<code>foo.bar()</code>",
    },
  ],
  Array [
    Object {
      "node": <pre>
        foo.bar('hello world')
      </pre>,
      "path": "$",
      "type": "text",
      "value": "<pre>foo.bar('hello world')</pre>",
    },
  ],
  Array [
    Object {
      "node": <br />,
      "path": "$",
      "type": "text",
      "value": "
",
    },
  ],
]
`;
